# financial-goals-tracker

./: .gitignore  README.md  contributions_export.csv  db.py  financial_goals.db  goals_calculator.py  goals_export.csv  investment_recommendation.py  main.py  project_context.md  pyproject.toml
backups/20250305_054101/: financial_basics.csv  goals.csv
backups/20250305_054930/: financial_basics.csv  goals.csv
backups/20250305_055005/: contributions.csv  financial_basics.csv  goals.csv
backups/20250305_055027/: financial_basics.csv  goals.csv
backups/20250305_055226/: financial_basics.csv  goals.csv
src/financial_goals_tracker/: __init__.py  db.py  goals_calculator.py  investment_recommendation.py  main.py
tests/: test_menus.py
